--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="">Студия</a>
         </li>
         <li>
-            <a href="">Портфолио</a>
+            <a href="./portpholio.html">Портфолио</a>
         </li>
         <li>
             <a href="">Контакты</a>
