--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <a href="./index.html" class="link">WebStudio</a>
-        <ul class="list">
+        <ul class="list site-nav">
           <li>
             <a href="./index.html" class="link">Студия</a>
           </li>
@@ -30,13 +30,13 @@
           </li>
         </ul>
       </nav>
-
-      <ul class="list">
+    
+      <ul class="list links">
         <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link links">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link links">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
