--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header>
-      <nav class="site-nav">
+      <nav>
         <a href="./index.html" class="link">WebStudio</a>
-        <ul class="list">
+        <ul class="list site-nav">
           <li>
             <a href="./index.html" class="link">Студия</a>
           </li>
@@ -89,8 +89,8 @@
 
       <!-- чем мы занимаемся -->
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
 
         <ul class="list">
           <li>
@@ -109,8 +109,8 @@
 
       <!-- наша команда -->
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
 
         <ul class="list">
           <li>
