--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <main>
         
         <!--кнопки-переключатели проектов-->
-        <section>
+        <section class="select">
             <ul class="list pointer">
                 <li><button type="button" class="buttons">Все</button></li>
                 <li><button type="button">Веб-сайты</button></li>
@@ -53,9 +53,9 @@
             </ul>
         </section>
 
-      <section>
+      <section class="projects">
         <!-- Раздел проектов, спрятать заголовок!-->
-        <h1>Наши проекты</h1>
+        <h1 class="projects-title">Наши проекты</h1>
         <ol class="list">
             <li>
                 <img src="./images/techno-hryak.jpg" alt="Визитки на ноутбуке" width="370">
