--- a/index.html
+++ b/index.html
@@ -5,38 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="link">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <ul class="list site-nav">
-          <li>
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li>
-            <a href="" class="link">Контакты</a>
-          </li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="list links">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link links">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link links">+38 096 111 11 11</a>
-        </li>
+      <ul class="list nav-links">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -45,7 +35,7 @@
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="main-button">Заказать услугу</button>
       </section>
 
       <!-- преимущества -->
@@ -56,15 +46,15 @@
 
         <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="features-header">Внимание к деталям</h3>
+            <p class="features-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
         </ul>
 
         <ul class="list">
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="features-header">Пунктуальность</h3>
+            <p class="features-description">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
@@ -72,8 +62,8 @@
 
         <ul class="list">
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="features-header">Планирование</h3>
+            <p class="features-description">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
@@ -81,8 +71,8 @@
 
         <ul class="list">
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="features-header">Современные технологии</h3>
+            <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -115,34 +105,34 @@
         <ul class="list">
           <li>
             <img src="./images/igor.jpg" alt="фото игоря" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-name-description">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga.jpg" alt="фото ольги" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-name-description">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/nikolaj.jpg" alt="фото николая" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-name-description">Marketing</p>
           </li>
           <li>
             <img src="./images/mikhail.jpg" alt="фото михаила" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-name-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html" class="link">WebStudio</a>
+      <a href="./index.html" class="logo">WebStudio</a>
 
       <address>
-        <ul class="list">
-          <li><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <ul class="list nav-links">
+          <li><a href="" class="link foot-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a href="mailto:info@example.com" class="link">info@example.com</a></li>
           <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
         </ul>
