--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="list site-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="link active-color">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
@@ -34,7 +34,7 @@
       <!--кнопки-переключатели проектов-->
       <section>
         <ul class="list">
-          <li><button type="button" class="buttons accent-buttons">Все</button></li>
+          <li><button type="button" class="buttons accent-buttons active-color">Все</button></li>
           <li><button type="button" class="buttons accent-buttons">Веб-сайты</button></li>
           <li><button type="button" class="buttons accent-buttons">Приложения</button></li>
           <li><button type="button" class="buttons accent-buttons">Дизайн</button></li>
