--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="list site-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="link primary">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
@@ -38,11 +38,11 @@
         <!--кнопки-переключатели проектов-->
         
         <ul class="list">
-          <li><button type="button" class="buttons accent-buttons">Все</button></li>
-          <li><button type="button" class="buttons accent-buttons">Веб-сайты</button></li>
-          <li><button type="button" class="buttons accent-buttons">Приложения</button></li>
-          <li><button type="button" class="buttons accent-buttons">Дизайн</button></li>
-          <li><button type="button" class="buttons accent-buttons">Маркетинг</button></li>
+          <li><button type="button" class="buttons primary">Все</button></li>
+          <li><button type="button" class="buttons">Веб-сайты</button></li>
+          <li><button type="button" class="buttons">Приложения</button></li>
+          <li><button type="button" class="buttons">Дизайн</button></li>
+          <li><button type="button" class="buttons">Маркетинг</button></li>
         </ul>
 
         <!-- Раздел проектов, спрятать заголовок!-->
