--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="./index.html" class="logo">WebStudio</a>
         <ul class="list site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link primary">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
