--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">
+          <span class="active-color">Web</span>Studio
+        </a>
         <ul class="list site-nav">
           <li><a href="./index.html" class="link primary">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -42,7 +44,7 @@
 
       <section class="features">
         <!-- скрыть название секции -->
-        <h2 class="features-title">Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
 
         <ul class="list">
           <li>
@@ -127,8 +129,10 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="logo footer">
+        <span class="active-color">Web</span>Studio
+      </a>
 
       <address>
         <ul class="list nav-links">
