--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,8 @@
         </ul>
 
         <!-- Раздел проектов, спрятать заголовок!-->
-        <h1 class="projects-title">Наши проекты</h1>
-        <ol class="list">
+        <h1 class="visually-hidden">Наши проекты</h1>
+        <ul class="list">
           <li>
             <img src="./images/techno-hryak.jpg" alt="Визитки на ноутбуке" width="370" />
             <h2 class="project-header">Технокряк</h2>
@@ -93,12 +93,14 @@
             <h2 class="project-header">Growing Business</h2>
             <p class="project-description">Приложение</p>
           </li>
-        </ol>
+        </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="logo footer">
+        <span class="active-color">Web</span>Studio
+      </a>
     
       <address>
         <ul class="list nav-links">
