--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,16 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">
+          <span class="active-color">Web</span>Studio
+        </a>
         <ul class="list site-nav">
           <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link primary">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-
+    
       <ul class="list nav-links">
         <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
